--- a/Безусловная любовь.md
+++ b/Безусловная любовь.md
@@ -2,7 +2,10 @@
 Tags: #
 
 ---
-# Title
+-  Укрепление своих границ
+- Мотивация, волевые усилия, самодисциплина это всегда насилие, выход из зоны комфорта, но для себя любимого прогнозируя будущий успех и получая залог от тела дофамин как топливо.
+	- Тут главное понять и принять полностью свою точку зрения.
+	- Или оставить ограничения на сохранение (работа ради чего-то)  
 
 </br>
 ---
