--- a/Отношение.md
+++ b/Отношение.md
@@ -14,6 +14,30 @@ Tags: #
 - Подчиненость = навязыванные желания + насилие (над собой и со стороны)
 -  Ответственность = свой желания + принципы
 	- Принципы могут не раздялять другие, любовь к себе позволит пережить их несогласие, иначе вас поглатит чувство вины.
+</br>
+
+### Будьте радостны за других
+- Помните от тех кто вас любит, кто вами дорожит и помнит о вас 
+- Делайте радость для других 
+	- Вы наверняка хотите счастья и радости во всем мире, так примите ее от других.
+- [[Позитивные мыли]]
+- [[Любовь к себе]]
+- Тренировка любви к себе, через избавления негативно влияющих привычек
+	- агресия, злость, зависть на тригеры
+	- Не сравнивать себя с другими. "Не смотря на то что.... я принимаю и люблю себя такой какой я есть" 
+- Когда вам радостно двигайте глазами ДПДГ
+
+
+- Оставайтесь собой не сливайтесь со своим партнером
+- Отношения с другим человеком не должны быть спасением
+- Аналезируйте и будьте честны с собой и своим партнером в вопросе того чего вы ожидаете от отношений:
+	- Что вы ждете от человека, хотите что бы он вас сделал счастливым ?
+	- Или хотите вместе провадить время, для чего ?
+	- Много вы ли хотите ?
+	- Хотити ли переложить ответственность ?
+
+`От себя не убежишь` 
+
 
 </br>
 ---
