git reset --soft HEAD^ git reset --soft HEAD~1 git reset HEAD T-psyho/Files/Гипноз. Гипнотическая Индукция Дейва Элмана. Самогипноз- сушать в аудио.mp4

--- a/Коммуникация.md
+++ b/Коммуникация.md
@@ -11,6 +11,15 @@ Tags: #
 4. Выйгра-Выйграш. Радость для обоих.
 </br>
 
+Базовые вещи коммуникации:
+1. Просить ++
+2. Отказывать ---
+3. [[Хвала Комплименты]] - -
+4. Критиковать +-
+5. Выражать свое мнение -+
+6. Конфликтовать +++
+
+
 ### Пара:
 Интроверт:
 - Время бобыть в одиночестве
