--- a/Мышечная релаксация.md
+++ b/Мышечная релаксация.md
@@ -11,6 +11,10 @@ Tags: #
 
 ### [[Медитация]]
 
+# Транс
+![[Гипноз. Гипнотическая Индукция Дейва Элмана. Самогипноз- сушать в аудио.mp4]]
+![[Гипнотическая индукция на расслабление и концентрацию внимания. Погружение в медитацию и гипноз.mp4]]
+
 
 </br>
 ---
