--- a/Поток.md
+++ b/Поток.md
@@ -34,6 +34,23 @@ Tags: #
 Жесткое следование заранее составленному плану может сыграть злую шутку, и вы просто не заметите, что в результате изменения обстоятельств появились другие возможности и более быстрые и легкие пути получения желаемого.
 
 Причины тому две. Первая, как я говорила ранее, ты просто выбрала не свое дело. Экспериментируй, ищи себя. Вторая – ты так боишься не достичь цели, что отравляешь этими мыслями весь процесс. Ты думаешь о будущем и рисуешь себе страшные картины, хотя про завтрашний день нужно просто забыть.
+
+Результат воображаем — до тех пор, пока не получен.
+Хочешь результат — организуй процесс
+результат невозможен без процесса.
+Рано или поздно придется что-то делать, и чем лучше налажен процесс, тем больше шансов на результат.
+
+# Работа
+**если ты хочешь заняться чем-то, то подумай, какого рода удовольствия могут быть получены в ситуации исполнения этого дела**.
+Я часто имею дело со студентами и учащимися, жалующимися на то, что им очень неприятно заниматься каким-либо делом, которое они должны исполнять. При анализе этих жалоб не было ни одного исключения из сформулированных правил. Всегда я находил, что это дело, например учение, было связано с ситуациями, порождающими неприятные переживания. Накопление этих переживаний со временем образовало эмоциональный барьер, через который не так-то легко прорваться даже при желании.
+Учащийся, вставший на путь самовоспитания, должен ответить на вопросы: что же в этой ситуации вызывает плохие переживания, которые переносятся на данное занятие? Что мне мешает наслаждаться познанием. Каждый без труда найдет ответ на этот вопрос, если он действительно обусловлен ситуацией. Если же мы не можем найти ответа, то начинаем думать, что нам не нравится сама деятельность. Говорят: «Мне не нравится эта работа». А при ближайшем рассмотрении оказывается, что плохие переживания возникают вследствие общения с людьми, включенными в трудовую ситуацию, их отношения к тому, что я делаю.
+роме того, нужно принимать во внимание и так называемые **эмоциональные барьеры** – установки, комплексы, предубеждения, которые сформировались ранее. Возможно, когда-то мы делали что-то похожее, но тогда у нас не получилось или нам сказали какую-то гадость. Это могло оставить свой след и повлиять на нас сейчас. Такие моменты тоже нужно иметь в виду. Нельзя позволять неудачному/неприятному опыту отравлять нам жизнь в настоящем.
+**Фактор вклада.** Человек должен осознавать, что своей работой он приносит пользу компании. Люди также работают гораздо лучше, когда чувствуют признательность коллег и руководителя.
+**Фактор веры.** Работник должен верить в то, что он делает. Убежденность, что надо продолжать делать свою работу даже в непростые времена, дает энергию и подкрепляет мотивацию.
+**Фактор общности.** Удовлетворенность работой высока, если человек чувствует, что он вписывается в культуру компании. Корпоративное же несоответствие — как неподходящая одежда на вечеринке — опустошает и сильно снижает отдачу.
+**Фактор обязательств.** Если человек воспринимает свою деятельность как значимую для общества, он более счастлив и эффективен.
+**Фактор самооценки.** Слишком низкая самооценка работника приводит к плохим результатам, слишком высокая — к высокомерию и неэффективным решениям.
+
 </br>
 ---
 ###### zero-link </br>
