--- a/Самооценка Увереность.md
+++ b/Самооценка Увереность.md
@@ -41,6 +41,14 @@ Tags: #
 - Мы видим и чувствуем себя только изнутри. Но внутрений дискомфорт может нам подсказывать о наших беспокойствах.
 - страх утраты любви толкает нас на развтие своей идентичности
 - страх быть, собой остаться одному, не знать свои положительные стороны. Решив для себя эти вопросы можно понять себя и принять. Тревога это топливо.
+
+# [[Осознаность]]
+- Самооценка это в первую очередь отношение к себе
+- Критика и похвала оценивается спокойно 
+- Оценивайте свой поступки и достижения, отмечайте их
+
+
+</br>
 ---
 ###### zero-link </br>
 
