--- a/Коммуникация.md
+++ b/Коммуникация.md
@@ -17,7 +17,7 @@ Tags: #
 3. [[Хвала Комплименты]] - -
 4. Критиковать +-
 5. Выражать свое мнение -+
-6. Конфликтовать +++
+6. [[Конфликт]] +++
 
 
 ### Пара:
