--- a/Медитация.md
+++ b/Медитация.md
@@ -5,6 +5,39 @@ Tags: #
 # Title
 - Книга Сандо Кайсен ""**Дзен** Медитация без медитации"
 - Позволяет выстраивать обходные пути для травмирующих областей воспоминаний, за счет ослабление системы фокуса на них и предоставляя мозгу автоматически укреплять и простраивать новые ("позитивные мысли") пути успокаивающие вашу ЦНС. 
+
+
+Эффективность
+- Уменьшение стресса
+	- Депрессия
+	- тревожное расстройство
+	- Боль
+	- Бессонница
+	- Концентрацию внимания
+	- Повысить качество жизни "Счастья"
+
+Как это работает
+	 Нейропластичность - в зависимости от ваших действии и желаний структура нейронов может быть изменина
+
+С возрастом гипокам, хуже работает, сложнее думать и запоминать. Медитация может замедлить и даже улучшить работу мозга связанную с памятью и решением (Гипокамп).
+в исследовании говориться что спустя 3 месяца мозг 50 летних людей по активности был сравним с 25 летними
+Люди у которых присутствует в жизни больше стресса (депрессия, птср) серое вещество может уменьшатся. 
+
+### [[Височно-теменной узел]]
+- Отвечает за перспктивное мышление (будущее), эмпатию и сострадание. Этот отдел мозга важен для коммуникации и понимания людей.
+
+[[Минадлина мозга]]
+Уменьшение миндалевидного тела
+При стрессе оно увеличивается и очень долго может находится в таком состоянии. 
+
+# [[Гиппокамп]]
+[[Мозг и его ритмы]]
+
+Всего 8 недель достаточно что бы эффект начал действовать
+
+«Предыдущие исследования показали, что тета-волны указывают на глубокое расслабление и чаще возникают у опытных практикующих медитацию. Источником, вероятно, являются лобные части мозга, которые связаны с отслеживанием других психических процессов».  
+  
+«Когда мы измеряем умственное спокойствие, эти области сигнализируют нижним частям мозга, вызывая реакцию физического расслабления, которая возникает во время медитации».
 </br>
 ---
 ###### zero-link </br>
