--- a/Осознаность.md
+++ b/Осознаность.md
@@ -8,6 +8,9 @@ Tags: #
 	- Держать негативные эмоции в среднем диапазоне и разбиратся с ними, фильтровать
 	- [[Базовые навыки психики]]
 	- Открытость
+	- Критическое мышление 
+	- [Интроспекция](https://ru.wikipedia.org/wiki/Интроспекция_(психология))
+	- Здоровая [[Рефлексия]]
 
 </br>
 ---
