--- a/Отношение.md
+++ b/Отношение.md
@@ -39,6 +39,13 @@ Tags: #
 `От себя не убежишь` 
 
 [[Коммуникация]]
+
+
+1.   Поддержка других. Будьте сами спокойны. Уровни поддержки разные по уровню тревожности. если 8-10
+2.   Эмпатия. 4-7
+3.   Давать четкую обратную связть на поступки человека. 1). Факт который вам не нравится -> 2). Эмоцию которую вы испытываете -> 3). Потребнасть которую вы не удовлетворяете или удовлетваряете для закрепления связи -> 4). конкретная просьба как действовать в дальнейшем. 
+4.   Указывать человеку какие позитивные эмоции от него вы получаете, для поднятия самооценки и настроения.
+5.   Ненасилие, честновсть, свобода и отвественность за отношения
 </br>
 ---
 ###### zero-link </br>
