--- a/Психосоматика.md
+++ b/Психосоматика.md
@@ -23,6 +23,31 @@ Tags: #
 - Проблема циклично возвращается, потому что от нее нельзя избавится по каким-либо причинам. (Человек работает на не любимой работе т.к. имеется кредит и он боится уйти)
 - Понять от чего хочется уйти и почему нельзя или не получается этого сделать? Уйти или принять и переосмыслить
 - В акивной фазе распада клеток слизистой желудка в зонах с плоским эпителием. Чем долше длиться конфликт, тем глубже дефекты слизистой. Билогический смысл такой увеличить объем желудка и скорость прохождения пищи, что бы получать больше микроэлементов и усилится для решения проблемы.    
+
+
+- Период восстановления == периоду активной фазы (работы, решения конфилкта,) активной умственной деятельности. `Можно ускорить!!!???`
+
+
+# Чикагская семерка
+- Франц Александер из Чикагского университета психоанализа.
+-  гипертония, язва, бронхиальная астма, Нейродермит (атопический дерматит), гипертония, Язвенная болезнь желудка и 12-перстной кишки, тиреотоксикоз (гиперфункция щитовидной железы), ревматоидный артрит, неспецифический язвенный колит, мигрень, псориаз, сахарный диабет 2 типа, ишемическая болезнь сердца, бесплодие, аллергический ринит
+- "К любой болезни - даже из "чикагской семерки" - есть генетическая предрасположенность, но проявиться она может от того, как человек реагирует на окружающее, как умеет проживать эмоцию. Но дело не только в эмоциях, - уверена Надежда Чумак. - Например, фактор развития ишемии - атеросклеротические бляшки сосудов сердца. Но если научить человека управлять эмоциями, реагировать экологично, более спокойно, а при этом он продолжит есть много жирных продуктов, этой работы будет недостаточно. Без коррекции питания проблему будет не решить. Другое дело, что может выясниться, почему человек ест так много жирного. Скорее всего, виноват в этом тоже эмоциональный фактор. Так что "идущий на поправку" после работы со специалистом по психосоматике обычно меняет и диету".
+
+
+# New German Medicine
+1-й Биологический Закон: любое «заболевание», которое на самом деле является вполне логичной и важной реакцией организма на неожиданное конфликтное событие, является частью значимой Специальной Биологической Программы (СБП). Эта реакция на конфликт в организме происходит одновременно на трёх уровнях – в психике, в мозге и в органе.
+
+2-й Биологический Закон: эта Специальная Биологическая Программа (СБП) всегда имеет две фазы, при условии, что конфликт разрешился (активная фаза конфликта и фаза восстановления).
+
+3-й Биологический Закон: все ткани нашего тела реагируют на конфликт совершенно определённым образом.
+
+Ткани, управляемые из древнего мозга (ствол и мозжечок) реагируют на конфликт ростом ткани (пролиферация клеток, рост опухоли), а после разрешения конфликта - деградацией этих, теперь уже лишних, клеток (их съедают бактерии).
+
+Ткани, управляемые из нового мозга (большие полушария) реагируют на конфликт уменьшением количества клеток (некроз, изъязвление), а после разрешения конфликта восстановлением клеточной структуры в этом же месте (для этого организм в язвы накачивает жидкость, чтобы язвы зарастить, а медики называют это опухолью).
+
+4-й Биологический Закон разъясняет благоприятную роль микробов в организме в их отношении ко всем типам тканей нашего тела при работе любой Специальной Биологической Программы (СБП).
+
+5-й Биологический Закон (квинтэссенция Новой Медицины): всякая «болезнь» – это часть значимой Специальной Биологической Программы Природы, созданной для оказания помощи организму (людей, животных, растений) для успешного разрешения биологического конфликта.
 </br>
 ---
 ###### zero-link </br>
@@ -31,6 +56,11 @@ Tags: #
 ---
 ###### Links </br>
 https://www.youtube.com/watch?v=hOC-awfCFnA&t=9s&ab_channel=Психосоматика
+
+Критика, факты, мифы:
+https://www.youtube.com/watch?v=UAsSWYpNy6s&ab_channel=ПостНаука
+Сюзанна О’Салливан  - Все в твоей голове
+
 
  &emsp; | &emsp; 
 
