--- a/Рефлексия.md
+++ b/Рефлексия.md
@@ -2,6 +2,91 @@
 Tags: #
 
 ---
+Под рефлексией в психологии понимается осмысление и анализ человеком своего внутреннего мира: знаний и эмоций, целей и мотивов, поступков и установок. А также понимание и оценка отношения окружающих. Рефлексия включает в себя также способность к самокритике. Данный процесс может быть весьма болезненным, но рефлексия необходима для нормального развития личности. 
+Ретроспективная рефлексия – это осмысление того, что уже произошло, оценка своих поступков, побед и поражений, анализ их причин и извлечение уроков на будущее.
+
+Чтобы «самокопаться» с пользой для дела необходимо избежать следующих ошибок:
+
+1.  Следует обдумать мотивы поступков, а не сами поступки, попытаться ответить на вопрос «Зачем я делаю или собираюсь сделать что-то?»
+2.  Прекратить постоянно перемалывать в голове прошлые грехи и неудачи, придумывая возможно иные последствия того, что уже свершилось. Что было, того уже нет, думайте о текущем моменте, стройте планы на будущее.
+3.  Культивировать чувство вины. Да, ошиблись, да получили за это свой урок. Нет смысла ругать себя за то, что исправить уже нельзя. Все не без греха.
+4.  Отвечать за весь мир. Процессы в мире происходят и помимо нашей воли. Не следует брать на себя ответственность за то, на что мы не в силах повлиять.
+
+После получения навыков рефлексии, можно задать себе несколько вопросов и дать на них честные ответы:
+
+-   Подумайте, есть ли что-то в прошлом, к чему бы стоило вернуться и пытаться начать заново. Это может быть семья, работа, увлечения, друзья и т.д. Иногда возврат к прошлому означает начало нового этапа.
+-   Четко установите для себя, что приносит удовольствие и делает счастливым. Это и будет стратегической целью, которой следует посвятить дальнейшую жизнь.
+-   Если та точка, в который Вы находитесь сейчас не устраивает, определите действия, которые нужно предпринять для выхода из нее. Не скатывайтесь к самобичеванию или списанию всех проблем на внешние обстоятельства.
+-   Правдиво ответьте себе на вопрос, что Вы делаете неправильно. Не следует заламывать руки с вопросом: «за что мне это?». Примите ответственность за неудачи на свой счет. Где была ошибка, недоработка? Правда может неприятной, не без нее сложно что-то поправить.
+-   Если в вопросе Вы потерпели неудачу, проанализируйте, все ли возможное было предпринято или можно попробовать что-то еще.
+-   Анализируйте поступки с точки зрения достижения цели. Это не значит, что нельзя быть спонтанным и нужно продумывать каждый шаг. Однако в условиях дефицита времени расстановка приоритетов становится необходимой.
+
+Признаком зрелой личности является способность принимать ответственность за свои поступки и ту жизнь, которую она имеет. Если человек постоянно винит в происходящем с ним окружающих и обстоятельства, он считается слабым. Поменять свое мировоззрение бывает сложно.
+
+В таком случае, вы всегда можете обратиться к специалисту, который будет сопровождать вас и давать обратную связь. Первоначально работа с психологом может послужить опорой, подсказкой, поможет нащупать правильное направление мыслей, способ думать.
+
+Согласно исследованию Гарвардской школы бизнеса, если сотрудники в конце дня рефлексировали об извлеченных уроках по 15 минут, то через 10 дней они работали на 23% лучше, чем те, кто не рефлексировал. Британское исследование это подтверждает: люди, которые размышляли о своем плане на день по дороге на работу, счастливее, продуктивнее и реже выгорают.  
+
+  Навык саморефлексии помогает:  
+  
+понять свои ошибки и причины неудачного опыта;  
+выявить сильные и слабые стороны, ценности и приоритеты;  
+научиться принимать правильные решения;  
+раскрыть свой потенциал;  
+понять других людей;  
+избавиться от эмоциональных привязанностей и препятствий;  
+видеть проблемы на ранних стадиях;  
+изменить характер.  
+
+Цикл Колба. Роль саморефлексии в процессе обучения описал американский теоретик образования Дэвид Колб в своей модели в 1970-е годы. Колб утверждал, что мы учимся, когда получаем конкретный опыт и через осмысление или рефлексию преобразуем его в теоретическую концепцию. Эту концепцию мы пробуем на практике, обновляя «цикл Колба».  
+
+![[Рефлексия_Цикл_Колба.png|500]]
+Если вы привыкли учиться с изучения теории, обратите внимание на эту модель. Цикл обучения может начаться с любого этапа, но именно приобретение опыта, а не теории — отправная точка развития.  
+
+Петля обучения Арджириса. В теории двойной петли обучения Криса Арджириса саморефлексия — триггер, который помогает выйти на новый уровень осознания своих компетенций и действий.  
+  
+Одинарная петля — это базовая форма обучения. Вы исправляете ошибки и учитесь решать похожие задачи чуть лучше в будущем. Часто программы корпоративного или профессионального обучения строят только на основе одинарной петли — исправлении ошибок. Из-за этого квалифицированные специалисты могут годами оставаться на месте в профессиональном развитии. По мнению Арджириса, им не хватает навыка саморефлексии, чтобы провести переоценку ценностей и найти новые способы решения задачи или отказаться от них.  
+  
+Двойная петля — обучение, когда вы задумываетесь о ценности тех или иных правил, нормативов и целей. Проще говоря, вы совершаете переход от стереотипного к более свободному мышлению. Согласно Арджирису, на второй уровень обучения возможно перейти только с развитым навыков саморефлексии.  
+![[Рефлексия_Петля_Арджириса.png|600]]
+#### **Саморефлексия как soft skills: как развить навык**  
+  
+Чтобы проверить уровень развития навыка саморефлексии, Арджирис предлагает подняться по «лестнице умозаключения» — шести этапам мыслительной деятельности:  
+  
+1. выбираете данные — смотрите прогноз погоды на определенном сайте;  
+2. интерпретируете их — сравниваете погоду за окном и прогноз дождя вечером;  
+3. проверяете предположение — просматриваете другие сайты;  
+4. формулируете выводы — по прогнозу дождь будет, но предпосылок не видно;  
+5. решаете: что делать и почему — на «всякий случай» берете с собой зонт, чтобы не промокнуть.  
+
+    
+Задавайте критические вопросы. Одно из лучших упражнений для развития саморефлексии — задавать рефлексивные вопросы себе и окружающим. Это вопросы, которые помогают взглянуть в суть ситуации, убеждения или эмоции, понять их истоки.  
+  
+Формулируйте актуальные, конкретные вопросы в позитивном ключе. Такие вопросы можно использовать для дневника. Например:  
+  
+что для меня по-настоящему важно?  
+как часто меня подводит интуиция и почему?  
+что или кто может мне помочь?  
+кому и как могу помочь я?  
+какой урок я извлеку из этой ситуации?  
+как изменить эту привычку?  
+  
+Учитесь получать и слышать обратную связь. Спрашивайте у коллег, друзей и знакомых обратную связь — отзыв о ваших действиях. Так вы получите взгляд и критику со стороны. Например, попросите честную обратную связь у своей команды и сделайте выводы. Вот вопросы, которые помогут ее получить:  
+  
+Если бы вы были на моем месте, что бы подумали об этом?  
+С вашей точки зрения, какую информацию я не учел?  
+Что из того, что только что произошло, было правильно?  
+Что мне следует улучшить?  
+  
+Отмечайте свои достижения. Из-за быстрого темпа жизни мы можем забыть оценить проделанную работу. Отслеживайте свой прогресс, хвалите и отмечайте достижения. Например, вкусной едой, путешествиями или выходными.  
+  
+Не бойтесь своих и чужих провалов. Спокойное отношение к провалам — признак развитого навыка саморефлексии. Если вы умеете учиться на своих ошибках, провалы станут полем для развития, а не трагедией.  
+  
+О провалах можно и нужно говорить. Например, гости подкаста «Это провал» открыто обсуждают свои провалы, ошибки и страхи.  
+  
+Будьте открыты новому и неизведанному. Пробуйте адаптироваться к психологическому или социальному дискомфорту из-за новых людей или других взглядов. Это отличная тренировка навыка саморефлексии.  
+
+
 # Событие
 -   Что я сделал(а) правильно в этой ситуации?
 -   Что я сделал(а) неправильно в этой ситуации?
@@ -19,6 +104,10 @@ Tags: #
 </br>
 ---
 ###### Links </br>
+
+https://trends.rbc.ru/trends/education/5f7a05a39a79477fd6fab579
+
+https://www.elle.ru/otnosheniya/psikho/refleksiya-68-voprosov-dlya-samoanaliza/
  &emsp; | &emsp; 
 
 
