--- a/Тревога.md
+++ b/Тревога.md
@@ -42,12 +42,49 @@ Tags: #
 
 Тревога, присущая всем людям, потенциально бесконечна. Особо тревожные люди просто не знают, когда следует остановиться и перестать беспокоиться. У них совершенно верная логика: «о будущем надо заботиться» — этого, на их взгляд, «сраные хиппи» как раз не делают. Но тревожность — это чувство, а чувство просто так не отпускает, отсюда следует простой вывод, что надо еще лучше заботиться о будущем — и тогда, может быть, отпустит. Вывод неверный. В крайних случаях тревожный человек пытается предусмотреть вообще всё, объять своим тревожным умом всю вселенную. Это не только утомительно, но и совершенно невозможно. 
 </br>
+
+## Избавление от тревоги
+1. Осознание тревоги. 
+	1. Причина. Понять какая ситуация вызвала тревогу;
+	2. Формулировка. Какие мысли тревоги за этим стоят;
+	3. Мотивы. Как вы действуете под влиянием тревоги.
+2. Работа с мыслями
+	1. **[[Метод когнетивной реструктуризации]]** Адекватность тревожной мысли с рациональной, объективной т.з. и отражение её в реальности. ВЕСОМОСТЬ.
+		1.  Что свидетельствует за мою мысль и против
+		2. Могут ли быть другие альтерантивные объяснения
+		3. Что на моем месте сказал бы кто-то другой или ваш авторитет (брат, друг)
+		4. Какие преимущества и недостатки дает это мышление
+		5. Основаны мой мысли на чувствах или на реально произошедшых фактах
+		6. Какие логические ошибки я допускаю
+		7. Не забываю ли значения важных фактов и не переоцениваю значения мелочей
+		8. Не рассуждаю ли я в экстремальных категория все или ничего
+		9. Не рассматриваю ли я вопросы на которые в принципе не могу ответить
+		10. Предявляю ли я к себе более строгие требования чем к другим
+		11. Не переоцениваю ли я вероятность негативного события
+		12. Если случится то чего я боюсь, то что было бы ужасного
+		13. Не принимаю ли я на себя ответственность за вещи которые не могу контролировать
+#### Стратегия решения проблем
+- Для решения реальных проблем а не в голове
+
+### 3. Шаг. Развитие позитивного мышления
+1 упражнение. Замечать и ценить в себе и в других сильные стороны и успехи
+	- Оценка ваших и смежных успехов даст вам увереность в новых начинаниях. Но это надо постоянно фиксировать что бы в кризисных ситуациях не обесценивать себя и свой прогресс.   
+2 упражнение. Загадывание желаний. Дает ключ и доступ к нашим потребностям. Четко представть чего вы хотите. Максимально деталезируйте в многогранных сочных ситуациях. И разрешите себе испытать эту позитивную эмоцию.   
+3 упражнение. Замена негативных ожиданий позитивными.
+4 упражнений. Замена глубинных убеждений о мире на позитивные. 
+Сложно заработать денег - легко заработать деньги.
+
+
+
 ---
 ###### zero-link </br>
 [Избавиться от любой тревоги](https://www.youtube.com/watch?v=DM2yoI9bQhI&ab_channel=%D0%95%D0%B2%D0%B3%D0%B5%D0%BD%D0%B8%D1%8F%D0%A1%D1%82%D1%80%D0%B5%D0%BB%D0%B5%D1%86%D0%BA%D0%B0%D1%8F)
 </br>
 ---
 ###### Links </br>
+
+https://www.youtube.com/watch?v=DM2yoI9bQhI&ab_channel=%D0%95%D0%B2%D0%B3%D0%B5%D0%BD%D0%B8%D1%8F%D0%A1%D1%82%D1%80%D0%B5%D0%BB%D0%B5%D1%86%D0%BA%D0%B0%D1%8F
+Подсознание может все, джон кеха
  &emsp; | &emsp; 
 
 
