--- a/Дофамин.md
+++ b/Дофамин.md
@@ -2,7 +2,11 @@
 Tags: #
 
 ---
-Дофамин после того как цель не достигнута
+Дофамин после того как цель не достигнута.
+связан Центром удовольствия
+Связан с мотивацией и предвкушения
+
+
 
 </br>
 ---
