--- a/Медитация.md
+++ b/Медитация.md
@@ -19,32 +19,111 @@ Tags: #
 Как это работает
 	 Нейропластичность - в зависимости от ваших действии и желаний структура нейронов может быть изменина
 
+- Медитация снижает симпатическую чрезмерную стимуляцию
+- снижает уровень холестерина
+- медитация значительно повысила толерантность к физической нагрузке и максимальную рабочую нагрузку, а также задержала начало депрессии
+- Модулировала экспрессию генов у пациентов с раком простаты
+	- Регуляция экспрессии генов позволяет клеткам контролировать собственную структуру и функцию
+	- Это 3-месячное исследование показало изменения в более чем 500 генах: 48 генов были активизированы, а 453 гена подавлены.
+- Практика медитации и йоги положительно влияет на экспрессию генов
+- Теломераза — это фермент, отвечающий за защиту и поддержание длины теломер, защитных колпачков на концах хромосом, которые способствуют стабильности хромосом. Более короткие теломеры связаны с ускоренным старением и сопутствующими заболеваниями. Хронический стресс снижает активность теломеразы и ускоряет укорочение теломер и преждевременное старение
+
 С возрастом гипокам, хуже работает, сложнее думать и запоминать. Медитация может замедлить и даже улучшить работу мозга связанную с памятью и решением (Гипокамп).
 в исследовании говориться что спустя 3 месяца мозг 50 летних людей по активности был сравним с 25 летними
 Люди у которых присутствует в жизни больше стресса (депрессия, птср) серое вещество может уменьшатся. 
 
-### [[Височно-теменной узел]]
-- Отвечает за перспктивное мышление (будущее), эмпатию и сострадание. Этот отдел мозга важен для коммуникации и понимания людей.
+[[Боль#^6396bc]] Обман мозга или воздействие?
+Mindfullness(Внимательность, сосредаточеность) или медитация позволяет уменьшить боль, страдания без осуждения себя за ошибки.
+-Меняет структуру и функцию мозга.
+-Это ключ к телу для преодаления боли и угасиню страха.
+-переход от размышлений о защите от угрозы к ее открытому и непредвзятому переживанию
+-Упражнения уменьшают стресс или избегают его заглушая, медитация решает этот вопрос подругому.
+Страх это выбор, опасность это реальность.
+Мы не можем выбирать что нам вспмоинать, но мы можем знать что с эимс делать.
 
-[[Минадлина мозга]]
-Уменьшение миндалевидного тела
-При стрессе оно увеличивается и очень долго может находится в таком состоянии. 
 
-# [[Гиппокамп]]
+- Частично похож на метод экспозиции в психотерапии.
+- Уменьшение боли (тревоги) за счет фокусровке на конкретной затрагивающей области в мозгу, а не на тригерах которые фантомно (зрительно или аудиально) будут стимулировать эту область памяти. Тем самым минуя страх и тревогу переходя к сути.
+- Вместо того что бы думать что что-то слуится, просто прочувствовать это на самом деле в настоящий момент.
+- В определенном смысле дзен — это чувствовать жизнь, а не чувствовать что-то о жизни. Alan watts
+- 
+
+### [[Минадлина мозга -- Amygdala]]
+- Отвечает за эмоции: гнев, страх что влияет на [[Тревога]].
+- В отчете Sara Lazar говорится об изминении после 8 недельной медитации у подопытных по 30-40минут. Уменьшение состояния стресса, а также (через МРТ) физически уменьшилось правое миндалевидное тела.
+- При стрессе amygdala увеличивается и очень долго может находится в таком состоянии. 
+![[SaraLarazMeditation_3_1.png]]
+- Изминение в миндаленнах как визуальный показатель уменьшения стресса
+- Тесты на крысах показали что стресс воздействовал даже спустя 3 недели после того как он закончился. 
+- У людей после курса mindfulness было обратный эффект помещяя в стрессовую ситуацию они меня отношение в нему. 
+
+
+### [[Гиппокамп -- Hippocampus]]
 [[Мозг и его ритмы]]
 
+- У людей с травмой, депрессией гипокамп меньше, но медитация может обратить этот процесс вспять
 Всего 8 недель достаточно что бы эффект начал действовать
 
 «Предыдущие исследования показали, что тета-волны указывают на глубокое расслабление и чаще возникают у опытных практикующих медитацию. Источником, вероятно, являются лобные части мозга, которые связаны с отслеживанием других психических процессов».  
   
 «Когда мы измеряем умственное спокойствие, эти области сигнализируют нижним частям мозга, вызывая реакцию физического расслабления, которая возникает во время медитации».
+
+Обновления памяти в гиппокампе у людей с тревогой и расстройствами происходит сложнее и труднее. 
+
+### [[Височно-теменной узел -- TRJ]]
+- Отвечает за творчество, эмпатию и сострадание. Этот отдел мозга важен для коммуникации и понимания людей.
+- А так же задействется в мышлении с разных точек зрения
+![[SaraLarazMeditation_3.png]]
+
+### [[Кора больших полушарий -- Cerebral cortex#^9e7345]]
+- Больший объем и толщина префронтальной коры были связаны с лучшей мыслительной способностью.
+- Источник: 2014 meta-analysis by Professor Nicole P.Yuan from the University of Arizona
+- С возрастом префронтальная кора уменьшается, но у медитирующих 50 летних сохраняется в состоянии как у 25 летних. 
+![[SaraLarazMeditation_2016-07-06.png]]
+
+- Различные техники медитации дают разнвые эффекты,  можете выбрать какая вам нравится и начать с нее либо эксперементировтаь.
+
+![[Пластичность интелекта.png]]
+
+- Зафиксировано у людей кто довно занимается медитацией. Большие объемы серого вещества большие объемы правого гиппокампа. орбито-фронтальная, и гиппокампальная области участвуют в эмоциональной регуляции и контроле реакции. Таким образом, большие объемы в этих областях могут объяснять способности и привычки развитые положительные эмоции, сохранять эмоциональную стабильность и вести себя осознанно.
+-  
+Критика:
+- МРТ имеют свои ограничения по точности
+- Нет данных имеет ли значение качество практики осознанности
+- Какие долгосрочные последствия для мозга
+
+https://pubmed.ncbi.nlm.nih.gov/11958969/
+Предполагается, что нахождение в сознательном состоянии медитации вызывает подавление кортико-стриарной глутаматергической передачи. Насколько нам известно, это первый случай, когда in vivo были получены доказательства регуляции состояний сознания на синаптическом уровне.
+
+подавление части мозга а именно (полосатого тела) на передачу дофамина, через клетки глии, то бишь в синапсисах участвует 3ти посредник это клетки Глия на которые можно воздействовать медитацией. Ёбнутся!  
+
+**NMDA-рецептор**
+Данный процесс играет ключевую роль в синаптической пластичности, а следовательно и в процессах обучения и памяти. 
+
+Медитация позволяет тренировать область [[Striatum -- Полосатое тело]] отвечающее за вознограждения (дофамин). Быть более дисциплинированным и использовать самоконтроль в примитивной системе вознаграждения. 
+https://www.frontiersin.org/articles/10.3389/fpsyg.2015.00090/full
+- Кроме того, недавно было обнаружено, что всего 2 недели тренировок осознанности уменьшают блуждание ума. 
+
 </br>
+
+
 ---
 ###### zero-link </br>
 
 </br>
 ---
 ###### Links </br>
+
+https://ru.wikipedia.org/wiki/%D0%92%D0%B8%D0%BF%D0%B0%D1%81%D1%81%D0%B0%D0%BD%D0%B0
+
+https://meditation-portal.com/meditaciya-aum/
+
+https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3184843/
+
+https://www.youtube.com/watch?v=wP9X6QIaflU&ab_channel=BrahmCentre
+
+https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4895748/
+
  &emsp; | &emsp; 
 
 
