--- a/Мозг и его ритмы.md
+++ b/Мозг и его ритмы.md
@@ -3,7 +3,7 @@ Tags: #
 
 ---
 # Ритмы головного мозга
-![[Спектр_ЭЭГ.jpg]]
+![[Спектр_ЭЭГ 1.jpg]]
 ### **Гамма-ритм** 
 - 30 Гц — 100 Гц, амплитуда обычно не превышает 15 мкВ Регистрируется в прецентральной, фронтальной, височной и теменной зонах коры головного мозга.
 - Обычно очень хорошо наблюдается при решении задач, которые требуют максимального сосредоточения внимания.
