--- a/Негативные мысли.md
+++ b/Негативные мысли.md
@@ -4,7 +4,7 @@ Tags: #
 ---
 - Мышление любого типа предполагает наличие конкретных мыслей и их общее направление. Негативные и неприятные мысли формируют страх, апатию и синдром жертвы. 
 - Отстранение от негативных мыслей снижает активность в миндалине
-	- [[Минадлина мозга]]
+	- [[Минадлина мозга -- Amygdala]]
 - Очистка ума от ненужных мыслей позволяет выбирать, какие эмоции испытывать.
 
 [[Решения проблемы]]
