--- a/Нейроглия. Глия.md
+++ b/Нейроглия. Глия.md
@@ -10,6 +10,7 @@ Tags: #
 3) изолировать один нейрон от другого;
 4) для уничтожения патогенов и удаления мертвых нейронов.
 5) Они также играют роль в [[Нейротрансмиссия]] и [[Синапсис]] синаптических связях, и в физиологических процессах, таких как дыхание. Играет важную роль в процессах памяти. Синаптическая пластичность и синаптогенез.
+6) Передают боль
 
 Глиальные клетки обладают гораздо большим клеточным разнообразием и функциями, чем нейроны, и глиальные клетки могут реагировать на нейротрансмиссию и управлять ею разными способами. Кроме того, они могут влиять как на сохранение, так и на консолидацию воспоминаний.
 - Нейробиологи обнаружили, что эти клетки необходимы для развития мозга, правильной метаболической функции мозга, здоровья нейронов, а теперь, возможно, и для самого интеллекта. Клетки человека могут быть, по крайней мере, частично ответственны за развитый интеллект у людей по сравнению с низшими видами.
