--- a/Фаза быстрого сна.md
+++ b/Фаза быстрого сна.md
@@ -8,6 +8,10 @@ Tags: #
 Фаза быстрого сна особенно важна для новорожденных: она обеспечивает нервную стимуляцию, способствующую формированию и развитию нервной системы
 
 Из-за нарушения БДГ-сна могут развиться мягкие психологические нарушения, такие как беспокойство, раздражительность, галлюцинации и расстройство концентрации внимания, а аппетит может увеличиться.  Независимо от того, какие психологические последствия имеет долговременное нарушение БДГ-сна, это остается вопросом споров. В нескольких отчетах указывалось, что недостаток БДГ-сна повышает агрессию и сексуальное поведение у лабораторных животных
+
+Ряд исследователей считает, что фаза быстрого сна является тем периодом, когда бессознательный материал, в том числе связанный со стрессами, всплывает для адаптивной переработки (Pearlman,1992; Winson,1993). Повторные ночные кошмары с пробуждениями весьма характерные для больных, страдающих ПТСР, прерывают и искажают фазу быстрого сна, а вызывающий сильное беспокойство дисфункциональный материал остается непереработанным (Ross et аll.,1990).
+
+
 </br>
 ---
 ###### zero-link </br>
